tests/errors/range_as_value_err/range_as_value_err.c
#error range_as_value_err:6:27 PARSE ERROR: Expected eof (6:27)
#error range_as_value_err:6:27 PARSE ERROR: Expected ')' (6:27)
#error range_as_value_err:6:27 PARSE ERROR: Expected closing ']' (6:27)
